Added horizontal menu.

--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
 										<li>✘ Components
 											<ul>
 												<li>✘ Background Colors (Should be synced with text)</li>
+												<li>✘ Highlight Colors, should be lighter than fill (background) colors.</li>
 												<li>✘ Badges</li>
 												<li>✘ Boxes</li>
+												<li>✘ .atk-actions (margins between buttons and links)</li>
 											</ul>
 										</li>
 										<li>Ideas
@@ -727,7 +729,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="span6 col">
+								<div class="span_6 col">
 									<div class="atk-media-block center atk-box atk-color-yellow">
 										<div class="atk-media">
 											<img src="temp/bananas.jpg" alt="Bananas" />
@@ -752,6 +754,14 @@
 									</div>
 								</div>
 							</div>
+							<h3>Navigations</h3>
+							<ul class="atk-menu atk-color-blue bar even-cells horizontal">
+								<li><a href="#">Item 1</a></li>
+								<li><a href="#">2</a></li>
+								<li><a href="#">Item 3</a></li>
+								<li><a href="#">Item 4</a></li>
+								<li><a href="#">Item 5</a></li>
+							</ul>
 						</section>
 						<section id="jqueryui">
 							<h2>jQueryUI</h2>
