Added .atk-label and .atk-component-* components. Styled .example for playgorund.

--- a/index.html
+++ b/index.html
@@ -688,80 +688,96 @@
 						<section id="colors">
 							<h2>Colors & Effects</h2>
 							<h3>Color Variety</h3>
-							<div class="atk-color-yellow">Yellow</div>
-							<div class="atk-color-pink">Pink</div>
-							<div class="atk-color-green">Green</div>
-							<div class="atk-color-blue">Blue</div>
+							<div class="example atk-box">
+								<div class="atk-color-yellow">.atk-color-yellow</div>
+								<div class="atk-color-pink">.atk-color-pink</div>
+								<div class="atk-color-green">.atk-color-green</div>
+								<div class="atk-color-blue">.atk-color-blue</div>
+							</div>
 							<h3>Effects</h3>
-							<div class="atk-effect-danger">Danger</div>
-							<div class="atk-effect-warning">Warning</div>
-							<div class="atk-effect-success">Success</div>
-							<div class="atk-effect-info">Info</div>
-							<div class="atk-effect-primary">Primary</div>
-							<div class="atk-effect-disabled">Disabled</div>
+							<div class="example atk-box">
+								<div class="atk-effect-danger">.atk-effect-danger</div>
+								<div class="atk-effect-warning">.atk-effect-warning</div>
+								<div class="atk-effect-success">.atk-effect-success</div>
+								<div class="atk-effect-info">.atk-effect-info</div>
+								<div class="atk-effect-primary">.atk-effect-primary</div>
+								<div class="atk-effect-disabled">.atk-effect-disabled</div>
+							</div>
+						</section>
+						<section id="components">
+							<h2>Components</h2>
+							<h3>Labels</h3>
+							<p><span class="atk-label atk-effect-info">.atk-label</span> component mixed with <span class="atk-label atk-effect-info">atk-effect-*</span>.</p>
+							<div class="example atk-box">
+								Lorem ipsum <span class="atk-label atk-effect-success">dolor</span> sit amet, consectetur adipiscing elit. Aliquam quam augue, placerat nec lacus nec, tristique sagittis lectus. Donec eu accumsan ipsum. Integer <span class="atk-label atk-effect-info">interdum</span> adipiscing mi eu varius. Pellentesque at <span class="atk-label atk-effect-warning">fringilla</span> elit. Etiam auctor dui at consectetur blandit. Nulla <span class="atk-label atk-effect-danger">sagittis</span> neque nisi, eget ornare nunc fermentum eu. In ante justo, mollis vitae lectus vel, mollis dictum mauris.
+							</div>
 						</section>
 						<section id="widgets">
 							<h2>Widgets</h2>
 							<h3>Media Blocks</h3>
-							<p>Examples are combined with <a href="#colors">.atk-color-*</a> and .atk-box
-							<div class="row">
-								<div class="span_6 col">
-									<div class="atk-media-block center atk-box atk-color-green">
-										<div class="atk-media">
-											<img src="temp/apples.jpg" alt="Apples" />
+							<p>Examples are combined with <a href="#colors" class="atk-label atk-effect-info">.atk-color-*</a> and <span class="atk-label atk-effect-info">.atk-box</span>.</p>
+							<div class="example atk-box">
+								<div class="row">
+									<div class="span_6 col">
+										<div class="atk-media-block center atk-box atk-color-green">
+											<div class="atk-media">
+												<img src="temp/apples.jpg" alt="Apples" />
+											</div>
+											<div class="atk-content">
+												<h4>Apples</h4>
+												<p>Donec dolor sapien, sollicitudin in erat ac, pellentesque venenatis orci. Nullam faucibus lacus quis sem fermentum adipiscing.</p>
+												<hr class="small" />
+												<a href="#">Download</a>
+											</div>
 										</div>
-										<div class="atk-content">
-											<h4>Apples</h4>
-											<p>Donec dolor sapien, sollicitudin in erat ac, pellentesque venenatis orci. Nullam faucibus lacus quis sem fermentum adipiscing.</p>
-											<hr class="small" />
-											<a href="#">Download</a>
-										</div>
-									</div>
-									<div class="atk-media-block center atk-box atk-color-pink">
-										<div class="atk-media">
-											<img src="temp/tomatoes.jpg" alt="Tomatoes" />
-										</div>
-										<div class="atk-content">
-											<h4>Tomatoes</h4>
-											<p>Donec dolor sapien, sollicitudin in erat ac, pellentesque venenatis orci. Nullam faucibus lacus quis sem fermentum adipiscing.</p>
-											<hr class="small" />
-											<a href="#">Download</a>
-										</div>
-									</div>
-								</div>
-								<div class="span_6 col">
-									<div class="atk-media-block center atk-box atk-color-yellow">
-										<div class="atk-media">
-											<img src="temp/bananas.jpg" alt="Bananas" />
-										</div>
-										<div class="atk-content">
-											<h4>Bananas</h4>
-											<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris at venenatis justo.</p>
-											<hr class="small" />
-											<a href="#">Download</a>
+										<div class="atk-media-block center atk-box atk-color-pink">
+											<div class="atk-media">
+												<img src="temp/tomatoes.jpg" alt="Tomatoes" />
+											</div>
+											<div class="atk-content">
+												<h4>Tomatoes</h4>
+												<p>Donec dolor sapien, sollicitudin in erat ac, pellentesque venenatis orci. Nullam faucibus lacus quis sem fermentum adipiscing.</p>
+												<hr class="small" />
+												<a href="#">Download</a>
+											</div>
 										</div>
 									</div>
-									<div class="atk-media-block center atk-box atk-color-blue">
-										<div class="atk-media">
-											<img src="temp/blueberries.jpg" alt="Blueberries" />
+									<div class="span_6 col">
+										<div class="atk-media-block center atk-box atk-color-yellow">
+											<div class="atk-media">
+												<img src="temp/bananas.jpg" alt="Bananas" />
+											</div>
+											<div class="atk-content">
+												<h4>Bananas</h4>
+												<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris at venenatis justo.</p>
+												<hr class="small" />
+												<a href="#">Download</a>
+											</div>
 										</div>
-										<div class="atk-content">
-											<h4>Blueberries</h4>
-											<p>Nunc id erat sit amet sapien convallis ultricies sed vel est. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-											<hr class="small" />
-											<a href="#">Download</a>
+										<div class="atk-media-block center atk-box atk-color-blue">
+											<div class="atk-media">
+												<img src="temp/blueberries.jpg" alt="Blueberries" />
+											</div>
+											<div class="atk-content">
+												<h4>Blueberries</h4>
+												<p>Nunc id erat sit amet sapien convallis ultricies sed vel est. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+												<hr class="small" />
+												<a href="#">Download</a>
+											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 							<h3>Navigations</h3>
-							<ul class="atk-menu atk-color-blue bar even-cells horizontal">
-								<li><a href="#">Item 1</a></li>
-								<li><a href="#">2</a></li>
-								<li><a href="#">Item 3</a></li>
-								<li><a href="#">Item 4</a></li>
-								<li><a href="#">Item 5</a></li>
-							</ul>
+							<div class="example atk-box">
+								<ul class="atk-menu atk-color-blue bar even-cells horizontal">
+									<li><a href="#">Item 1</a></li>
+									<li><a href="#">2</a></li>
+									<li><a href="#">Item 3</a></li>
+									<li><a href="#">Item 4</a></li>
+									<li><a href="#">Item 5</a></li>
+								</ul>
+							</div>
 						</section>
 						<section id="jqueryui">
 							<h2>jQueryUI</h2>
