--- a/index.html
+++ b/index.html
@@ -6,25 +6,36 @@
     <head>
         <meta charset="utf-8">
         <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
-        <title>Agile Toolkit — Snippets</title>
-        <meta name="description" content="">
+		<title><?page_title?>Agile Toolkit — Default Title<?/?></title>
+        
+        <meta name="description" content="<?$page_description?>">
         <meta name="viewport" content="width=device-width">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-		<link href="css/agiletoolkit.css" rel="stylesheet" type="text/css" />
-		<link href="css/agiletoolkit-custom.css" rel="stylesheet" type="text/css" />
+		<link href="atk43/css/agiletoolkit.css" rel="stylesheet" type="text/css" />
+		<link href="atk43/css/agiletoolkit-custom.css" rel="stylesheet" type="text/css" />
+
+		<?$js_include?>
+
+		<script type="text/javascript">
+			$(function(){
+				<?$document_ready?>
+			});
+		</script>
     </head>
-    <body>
+	<body id="<?$pagename?>">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 
+        <?Layout?>
         <!-- Content -->
 
         <div class="atk-layout">
 			<div class="atk-layout-row">
 				<header id="atk-header" class="giga">AgileToolkit 4.3 &ndash; <strong>Snippets</strong></header>
+                <?$Menu?>
 			</div>
 			<div id="atk-main" class="atk-layout-row fluid">
 				<div id="atk-main-inner" class="atk-layout">
@@ -40,6 +51,7 @@
 						</ul>
 					</nav>
 					<div id="atk-content" class="atk-layout-column fluid">
+                        <?Content?>
 						<section>
 							<h2>Overview</h2>
 							<ul class="clean">
@@ -791,6 +803,7 @@
 							<h3>Sliders</h3>
 							<p>---</p>
 						</section>
+                        <?/Content?>
 					</div>
 				</div>
 			</div>
@@ -801,6 +814,8 @@
 			</div>
 		</div>
 		<!-- /Content -->
+
+        <?/?>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
