Added icons for media block.

--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
 												<h4>Apples</h4>
 												<p>Donec dolor sapien, sollicitudin in erat ac, pellentesque venenatis orci. Nullam faucibus lacus quis sem fermentum adipiscing.</p>
 												<hr class="small" />
-												<a href="#">Download</a>
+												<a href="#"><span class="icon-down-circled-1"></span>Download</a>
 											</div>
 										</div>
 										<div class="atk-media-block center atk-box atk-color-pink">
@@ -781,7 +781,7 @@
 												<h4>Tomatoes</h4>
 												<p>Donec dolor sapien, sollicitudin in erat ac, pellentesque venenatis orci. Nullam faucibus lacus quis sem fermentum adipiscing.</p>
 												<hr class="small" />
-												<a href="#">Download</a>
+												<a href="#"><span class="icon-down-circled-1"></span>Download</a>
 											</div>
 										</div>
 									</div>
@@ -794,7 +794,7 @@
 												<h4>Bananas</h4>
 												<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris at venenatis justo.</p>
 												<hr class="small" />
-												<a href="#">Download</a>
+												<a href="#"><span class="icon-down-circled-1"></span>Download</a>
 											</div>
 										</div>
 										<div class="atk-media-block center atk-box atk-color-blue">
@@ -805,7 +805,7 @@
 												<h4>Blueberries</h4>
 												<p>Nunc id erat sit amet sapien convallis ultricies sed vel est. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
 												<hr class="small" />
-												<a href="#">Download</a>
+												<a href="#"><span class="icon-down-circled-1"></span>Download</a>
 											</div>
 										</div>
 									</div>
