Agile55: Fixed layout margins

--- a/agile55-inner.html
+++ b/agile55-inner.html
@@ -17,7 +17,7 @@
 		<link href="atk43/css/agiletoolkit.css" rel="stylesheet" type="text/css" />
 		<link href="atk43/css/agiletoolkit-custom.css" rel="stylesheet" type="text/css" />
     </head>
-	<body class="page-index">
+	<body>
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
@@ -46,59 +46,57 @@
 			<div id="atk-main" class="atk-layout-row fluid">
 				<div id="atk-main-inner" class="atk-layout">
 					<div id="atk-content" class="atk-layout-column fluid">
-						<div class="atk-wrapper">
-								<div class="hero">
-							        <h1 class="atk-align-center">We could develop your SaaS idea in a month.</h1>
-							        <h2 class="atk-align-center"><a href="/public/start" class="atk-button atk-swatch-1">Start Here <span class="icon-angle-right"></span></a></h2>
-								</div>
-						        <div class="row atk-size-mega">
-						            <div class="span_4 col">
-						                <h3>Who we are?</h3>
-						                <p>Our team was establised in 1998. We were early advocates
-						                of "extreme programming" and later "agile
-						                methodologies". Our biggest achievement is release of our product - 
-						                <a href="http://agiletoolkit.org/" target="_blank">Agile
-						                    Toolkit</a>. It is now the <strong>most popular</strong>
-						                <a href="https://www.google.com/#q=php+ui+framework">PHP UI Framework</a> worldwide.</p>
+					    <div class="atk-wrapper">
+					        <h1>Services</h1>
+					        <div class="row">
+					            <div class="span_4 col">
+					                <h3 class="w-img"><img src="/public//./images/icon-display.png">Leading the Industry</h3>
+					                <p>What differentiates our team from others is that we are not following the industry - we lead it.
 
-						                <a href="/public/team">More About Us<span class="icon-angle-right"></span></a>
+					                While many other teams use opensource tools like CodeIgniter and Wordpress, we are on a completely
+					                different level. We released <a href="http://agiletoolkit.org/" target="_blank">Agile Toolkit</a>
+					                in 2011 and it is already adopted by tens of thousands developers around the world.
+					                </p>
 
+					            </div>
+					            <div class="span_4 col">
+					                <h3 class="w-img"><img src="/public//./images/icon-gears.png">Being Hardcore</h3>
+					                <p>Most offer offer cheap and poor quality development service we excel at both - affordable
+					                price and exception quality.</p>
 
-						            </div>
-						            <div class="span_4 col">
-						                <h3>How can we help?</h3>
+					                <p>We consult many leading star-up companies in Ireland an United Kingdom
+					                on security, efficiency, performanece, cloud-strategy, scalability and stability.</p>
 
-						                <p>We specialie in SaaS (Software as a Service) development for Start-Ups and Enterpreneurs.
-						                Planning <span class="icon-right-thin"></span> 
-						                Architecting <span class="icon-right-thin"></span> 
-						                Development <span class="icon-right-thin"></span> 
-						                Design <span class="icon-right-thin"></span> 
-						                Deployment <span class="icon-right-thin"></span> 
-						                Support <span class="icon-right-thin"></span> 
-						                Training. We help you at every step.
-						                </p>
+					            </div>
+					            <div class="span_4 col">
+					                <h3 class="w-img"><img src="/public//./images/icon-beaker.png">Recice of Success</h3>
+					                <p>We could get your on-line venture up and profitable before your competitors
+					                could fill out a perfect CTO to join for equity basis. Several members of our
+					                team are also co-founders and partners in some of the businesses we participated.
+					                If you are under-funded we are still interested to help.
+					                </p>
+					            </div>
 
-						                <a href="/public/team">More About Services<span class="icon-angle-right"></span></a>
+					        </div>
+					        <div class="row">
+					            <div class="span_4 col">
+					                <h3 class="w-img"><img src="/public//./images/icon-sign.png">Consultancy</h3>
+					                <p>We know our industry well. All our software is ready for cloud deployment, supports NoSQL,
+					                horizontal scaling, refactorable and architected in a best possible way.</p>
 
-						            </div>
-						            <div class="span_4 col">
-
-						                <h3>How are we different?</h3>
-
-						                <p>We are the most refined team you could have. Imagine
-						                having a refined, motivated and extremely experienced
-						                IT department for your start-up. Well, that's us.
-						                We come prepared. We have answers for any question or concern 
-						                you have.</p>
-
-
-						                <a href="/public/faq">Questions and Answers<span class="icon-angle-right"></span></a>
-
-						            </div>
-						        </div>
-
-
-						    </div>
+					                <p>Even if you have your own development team, we can still help
+					                you with some tools, consulting, infrastructure set-up, performance
+					                and flexibility software reviews.
+					                </p>
+					                
+					            </div>
+					            <div class="span_4 col">
+					                <h3 class="w-img"><img src="/public//./images/icon-tower.png">Support</h3>
+					                <p>Our support services are tailored to each client's needs. It is in our best interests to ensure your software’s performance is maintained but is also supported 24/7 by experts on hand, and not outsourced. By providing a quality support service we help our business partners maintain high levels of user satisfaction.</p>
+					            </div>
+					            <div class="span_4 col"><img src="/public//./images/image-services.png" class="image"></div>
+					        </div>
+					    </div>
 					</div>
 				</div>
 			</div>
