Agile55: Team page

--- a/agile55.html
+++ b/agile55.html
@@ -104,6 +104,9 @@
 			</div>
 			<div class="atk-layout-row">
 				<footer id="atk-footer">
+					<div class="atk-move-right">
+						<a href="#"><span class="icon-key-1"></span>Client Login</a>
+					</div>
 					&copy; Agile Toolkit 2013
 				</footer>
 			</div>
