--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-		<link href="atk43/css/agiletoolkit.css" rel="stylesheet" type="text/css" />
-		<link href="atk43/css/agiletoolkit-custom.css" rel="stylesheet" type="text/css" />
+		<link href="css/agiletoolkit.css" rel="stylesheet" type="text/css" />
+		<link href="css/agiletoolkit-custom.css" rel="stylesheet" type="text/css" />
     </head>
 	<body>
         <!--[if lt IE 7]>
