Clean up some problems with index file.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 		<link href="css/agiletoolkit.css" rel="stylesheet" type="text/css" />
-		<link href="css/agiletoolkit-custom.css" rel="stylesheet" type="text/css" />
     </head>
 	<body>
         <!--[if lt IE 7]>
@@ -2179,8 +2178,8 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
-        <script src="atk43/js/atk-helpers-min.js"></script>
-        <script src="atk43/js/demo-min.js"></script>
+        <script src="js/atk-helpers-min.js"></script>
+        <script src="js/demo-min.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
